--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "body-parser": "^1.20.3",
     "cli-color": "^2.0.4",
     "dayjs": "^1.11.9",
     "express-session": "^1.18.1",
